parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> var_decls_maybe_empty fun_decls_maybe_empty free_statements_maybe_empty
Rule 2     var_decl -> VAR ID ;
Rule 3     var_decl -> VAR ID = init ;
Rule 4     var_decls_maybe_empty -> <empty>
Rule 5     var_decls_maybe_empty -> var_decl var_decls_maybe_empty
Rule 6     fun_decl -> FUN function
Rule 7     fun_decls_maybe_empty -> <empty>
Rule 8     fun_decls_maybe_empty -> fun_decl fun_decls_maybe_empty
Rule 9     free_statement -> compound_stmt
Rule 10    free_statement -> simple_stmt ;
Rule 11    free_statements_maybe_empty -> <empty>
Rule 12    free_statements_maybe_empty -> free_statement free_statements_maybe_empty
Rule 13    init -> [ exprs_non_empty_w_commas ]
Rule 14    init -> expr
Rule 15    simple_stmt -> return_stmt
Rule 16    simple_stmt -> print_stmt
Rule 17    simple_stmt -> asgn_stmt
Rule 18    compound_stmt -> for_stmt
Rule 19    compound_stmt -> while_stmt
Rule 20    compound_stmt -> if_stmt
Rule 21    statement -> block
Rule 22    statement -> free_statement
Rule 23    statements_maybe_empty -> <empty>
Rule 24    statements_maybe_empty -> statement statements_maybe_empty
Rule 25    asgn_stmt -> ID = expr
Rule 26    asgn_stmt -> ID [ aexpr ] = expr
Rule 27    print_stmt -> PRINT expr
Rule 28    return_stmt -> RETURN expr
Rule 29    if_stmt -> IF lexpr statement
Rule 30    if_stmt -> IF lexpr statement ELSE statement
Rule 31    while_stmt -> WHILE lexpr statement
Rule 32    for_stmt -> FOR ( ; ; ) statement
Rule 33    for_stmt -> FOR ( ; ; asgn_stmt ) statement
Rule 34    for_stmt -> FOR ( ; lexpr ; ) statement
Rule 35    for_stmt -> FOR ( ; lexpr ; asgn_stmt ) statement
Rule 36    for_stmt -> FOR ( asgn_stmt ; ; ) statement
Rule 37    for_stmt -> FOR ( asgn_stmt ; ; asgn_stmt ) statement
Rule 38    for_stmt -> FOR ( asgn_stmt ; lexpr ; ) statement
Rule 39    for_stmt -> FOR ( asgn_stmt ; lexpr ; asgn_stmt ) statement
Rule 40    block -> { var_decls_maybe_empty statements_maybe_empty }
Rule 41    expr -> sexpr
Rule 42    expr -> aexpr
Rule 43    expr -> lexpr
Rule 44    exprs_non_empty_w_commas -> expr
Rule 45    exprs_non_empty_w_commas -> exprs_non_empty_w_commas , expr
Rule 46    lexpr -> lterm
Rule 47    lexpr -> lexpr OR lterm
Rule 48    lterm -> lfact
Rule 49    lterm -> lterm AND lfact
Rule 50    lfact -> FALSE
Rule 51    lfact -> TRUE
Rule 52    lfact -> ! lfact
Rule 53    lfact -> # ID [ aexpr ]
Rule 54    lfact -> # ID
Rule 55    lfact -> ( lexpr )
Rule 56    lfact -> # call
Rule 57    lfact -> cexpr
Rule 58    aexpr -> term
Rule 59    aexpr -> aexpr + term
Rule 60    aexpr -> aexpr - term
Rule 61    term -> fact
Rule 62    term -> term * fact
Rule 63    term -> term / fact
Rule 64    fact -> ID
Rule 65    fact -> ID [ aexpr ]
Rule 66    fact -> ( aexpr )
Rule 67    fact -> NUMBER
Rule 68    fact -> call
Rule 69    fact -> - fact
Rule 70    cexpr -> aexpr > aexpr
Rule 71    cexpr -> aexpr < aexpr
Rule 72    cexpr -> aexpr GE aexpr
Rule 73    cexpr -> aexpr LE aexpr
Rule 74    cexpr -> aexpr EQUAL aexpr
Rule 75    cexpr -> aexpr NOT_EQUAL aexpr
Rule 76    sexpr -> STRING
Rule 77    arguments -> exprs_non_empty_w_commas
Rule 78    function -> ID ( ) block
Rule 79    function -> ID ( parameters ) block
Rule 80    parameters -> ids_non_empty_w_commas
Rule 81    ids_non_empty_w_commas -> ID
Rule 82    ids_non_empty_w_commas -> ids_non_empty_w_commas , ID
Rule 83    call -> ID ( )
Rule 84    call -> ID ( arguments )

Terminals, with rules where they appear:

!                    : 52
#                    : 53 54 56
(                    : 32 33 34 35 36 37 38 39 55 66 78 79 83 84
)                    : 32 33 34 35 36 37 38 39 55 66 78 79 83 84
*                    : 62
+                    : 59
,                    : 45 82
-                    : 60 69
/                    : 63
;                    : 2 3 10 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39
<                    : 71
=                    : 3 25 26
>                    : 70
AND                  : 49
ELSE                 : 30
EQUAL                : 74
FALSE                : 50
FOR                  : 32 33 34 35 36 37 38 39
FUN                  : 6
GE                   : 72
ID                   : 2 3 25 26 53 54 64 65 78 79 81 82 83 84
IF                   : 29 30
LE                   : 73
NOT_EQUAL            : 75
NUMBER               : 67
OR                   : 47
PRINT                : 27
RETURN               : 28
STRING               : 76
TRUE                 : 51
VAR                  : 2 3
WHILE                : 31
[                    : 13 26 53 65
]                    : 13 26 53 65
error                : 
{                    : 40
}                    : 40

Nonterminals, with rules where they appear:

aexpr                : 26 42 53 59 60 65 66 70 70 71 71 72 72 73 73 74 74 75 75
arguments            : 84
asgn_stmt            : 17 33 35 36 37 37 38 39 39
block                : 21 78 79
call                 : 56 68
cexpr                : 57
compound_stmt        : 9
expr                 : 14 25 26 27 28 44 45
exprs_non_empty_w_commas : 13 45 77
fact                 : 61 62 63 69
for_stmt             : 18
free_statement       : 12 22
free_statements_maybe_empty : 1 12
fun_decl             : 8
fun_decls_maybe_empty : 1 8
function             : 6
ids_non_empty_w_commas : 80 82
if_stmt              : 20
init                 : 3
lexpr                : 29 30 31 34 35 38 39 43 47 55
lfact                : 48 49 52
lterm                : 46 47 49
parameters           : 79
print_stmt           : 16
program              : 0
return_stmt          : 15
sexpr                : 41
simple_stmt          : 10
statement            : 24 29 30 30 31 32 33 34 35 36 37 38 39
statements_maybe_empty : 24 40
term                 : 58 59 60 62 63
var_decl             : 5
var_decls_maybe_empty : 1 5 40
while_stmt           : 19


state 0

    (0) S' -> . program
    (1) program -> . var_decls_maybe_empty fun_decls_maybe_empty free_statements_maybe_empty
    (4) var_decls_maybe_empty -> .
    (5) var_decls_maybe_empty -> . var_decl var_decls_maybe_empty
    (2) var_decl -> . VAR ID ;
    (3) var_decl -> . VAR ID = init ;
    FUN             reduce using rule 4 (var_decls_maybe_empty -> .)
    FOR             reduce using rule 4 (var_decls_maybe_empty -> .)
    WHILE           reduce using rule 4 (var_decls_maybe_empty -> .)
    IF              reduce using rule 4 (var_decls_maybe_empty -> .)
    RETURN          reduce using rule 4 (var_decls_maybe_empty -> .)
    PRINT           reduce using rule 4 (var_decls_maybe_empty -> .)
    ID              reduce using rule 4 (var_decls_maybe_empty -> .)
    $end            reduce using rule 4 (var_decls_maybe_empty -> .)
    VAR             shift and go to state 4

    program                        shift and go to state 1
    var_decls_maybe_empty          shift and go to state 2
    var_decl                       shift and go to state 3

state 1

    (0) S' -> program .


state 2

    (1) program -> var_decls_maybe_empty . fun_decls_maybe_empty free_statements_maybe_empty
    (7) fun_decls_maybe_empty -> .
    (8) fun_decls_maybe_empty -> . fun_decl fun_decls_maybe_empty
    (6) fun_decl -> . FUN function
    FOR             reduce using rule 7 (fun_decls_maybe_empty -> .)
    WHILE           reduce using rule 7 (fun_decls_maybe_empty -> .)
    IF              reduce using rule 7 (fun_decls_maybe_empty -> .)
    RETURN          reduce using rule 7 (fun_decls_maybe_empty -> .)
    PRINT           reduce using rule 7 (fun_decls_maybe_empty -> .)
    ID              reduce using rule 7 (fun_decls_maybe_empty -> .)
    $end            reduce using rule 7 (fun_decls_maybe_empty -> .)
    FUN             shift and go to state 7

    fun_decls_maybe_empty          shift and go to state 5
    fun_decl                       shift and go to state 6

state 3

    (5) var_decls_maybe_empty -> var_decl . var_decls_maybe_empty
    (4) var_decls_maybe_empty -> .
    (5) var_decls_maybe_empty -> . var_decl var_decls_maybe_empty
    (2) var_decl -> . VAR ID ;
    (3) var_decl -> . VAR ID = init ;
    FUN             reduce using rule 4 (var_decls_maybe_empty -> .)
    FOR             reduce using rule 4 (var_decls_maybe_empty -> .)
    WHILE           reduce using rule 4 (var_decls_maybe_empty -> .)
    IF              reduce using rule 4 (var_decls_maybe_empty -> .)
    RETURN          reduce using rule 4 (var_decls_maybe_empty -> .)
    PRINT           reduce using rule 4 (var_decls_maybe_empty -> .)
    ID              reduce using rule 4 (var_decls_maybe_empty -> .)
    $end            reduce using rule 4 (var_decls_maybe_empty -> .)
    {               reduce using rule 4 (var_decls_maybe_empty -> .)
    }               reduce using rule 4 (var_decls_maybe_empty -> .)
    VAR             shift and go to state 4

    var_decl                       shift and go to state 3
    var_decls_maybe_empty          shift and go to state 8

state 4

    (2) var_decl -> VAR . ID ;
    (3) var_decl -> VAR . ID = init ;
    ID              shift and go to state 9


state 5

    (1) program -> var_decls_maybe_empty fun_decls_maybe_empty . free_statements_maybe_empty
    (11) free_statements_maybe_empty -> .
    (12) free_statements_maybe_empty -> . free_statement free_statements_maybe_empty
    (9) free_statement -> . compound_stmt
    (10) free_statement -> . simple_stmt ;
    (18) compound_stmt -> . for_stmt
    (19) compound_stmt -> . while_stmt
    (20) compound_stmt -> . if_stmt
    (15) simple_stmt -> . return_stmt
    (16) simple_stmt -> . print_stmt
    (17) simple_stmt -> . asgn_stmt
    (32) for_stmt -> . FOR ( ; ; ) statement
    (33) for_stmt -> . FOR ( ; ; asgn_stmt ) statement
    (34) for_stmt -> . FOR ( ; lexpr ; ) statement
    (35) for_stmt -> . FOR ( ; lexpr ; asgn_stmt ) statement
    (36) for_stmt -> . FOR ( asgn_stmt ; ; ) statement
    (37) for_stmt -> . FOR ( asgn_stmt ; ; asgn_stmt ) statement
    (38) for_stmt -> . FOR ( asgn_stmt ; lexpr ; ) statement
    (39) for_stmt -> . FOR ( asgn_stmt ; lexpr ; asgn_stmt ) statement
    (31) while_stmt -> . WHILE lexpr statement
    (29) if_stmt -> . IF lexpr statement
    (30) if_stmt -> . IF lexpr statement ELSE statement
    (28) return_stmt -> . RETURN expr
    (27) print_stmt -> . PRINT expr
    (25) asgn_stmt -> . ID = expr
    (26) asgn_stmt -> . ID [ aexpr ] = expr
    $end            reduce using rule 11 (free_statements_maybe_empty -> .)
    FOR             shift and go to state 20
    WHILE           shift and go to state 21
    IF              shift and go to state 22
    RETURN          shift and go to state 23
    PRINT           shift and go to state 24
    ID              shift and go to state 25

    free_statements_maybe_empty    shift and go to state 10
    free_statement                 shift and go to state 11
    compound_stmt                  shift and go to state 12
    simple_stmt                    shift and go to state 13
    for_stmt                       shift and go to state 14
    while_stmt                     shift and go to state 15
    if_stmt                        shift and go to state 16
    return_stmt                    shift and go to state 17
    print_stmt                     shift and go to state 18
    asgn_stmt                      shift and go to state 19

state 6

    (8) fun_decls_maybe_empty -> fun_decl . fun_decls_maybe_empty
    (7) fun_decls_maybe_empty -> .
    (8) fun_decls_maybe_empty -> . fun_decl fun_decls_maybe_empty
    (6) fun_decl -> . FUN function
    FOR             reduce using rule 7 (fun_decls_maybe_empty -> .)
    WHILE           reduce using rule 7 (fun_decls_maybe_empty -> .)
    IF              reduce using rule 7 (fun_decls_maybe_empty -> .)
    RETURN          reduce using rule 7 (fun_decls_maybe_empty -> .)
    PRINT           reduce using rule 7 (fun_decls_maybe_empty -> .)
    ID              reduce using rule 7 (fun_decls_maybe_empty -> .)
    $end            reduce using rule 7 (fun_decls_maybe_empty -> .)
    FUN             shift and go to state 7

    fun_decl                       shift and go to state 6
    fun_decls_maybe_empty          shift and go to state 26

state 7

    (6) fun_decl -> FUN . function
    (78) function -> . ID ( ) block
    (79) function -> . ID ( parameters ) block
    ID              shift and go to state 28

    function                       shift and go to state 27

state 8

    (5) var_decls_maybe_empty -> var_decl var_decls_maybe_empty .
    FUN             reduce using rule 5 (var_decls_maybe_empty -> var_decl var_decls_maybe_empty .)
    FOR             reduce using rule 5 (var_decls_maybe_empty -> var_decl var_decls_maybe_empty .)
    WHILE           reduce using rule 5 (var_decls_maybe_empty -> var_decl var_decls_maybe_empty .)
    IF              reduce using rule 5 (var_decls_maybe_empty -> var_decl var_decls_maybe_empty .)
    RETURN          reduce using rule 5 (var_decls_maybe_empty -> var_decl var_decls_maybe_empty .)
    PRINT           reduce using rule 5 (var_decls_maybe_empty -> var_decl var_decls_maybe_empty .)
    ID              reduce using rule 5 (var_decls_maybe_empty -> var_decl var_decls_maybe_empty .)
    $end            reduce using rule 5 (var_decls_maybe_empty -> var_decl var_decls_maybe_empty .)
    {               reduce using rule 5 (var_decls_maybe_empty -> var_decl var_decls_maybe_empty .)
    }               reduce using rule 5 (var_decls_maybe_empty -> var_decl var_decls_maybe_empty .)


state 9

    (2) var_decl -> VAR ID . ;
    (3) var_decl -> VAR ID . = init ;
    ;               shift and go to state 29
    =               shift and go to state 30


state 10

    (1) program -> var_decls_maybe_empty fun_decls_maybe_empty free_statements_maybe_empty .
    $end            reduce using rule 1 (program -> var_decls_maybe_empty fun_decls_maybe_empty free_statements_maybe_empty .)


state 11

    (12) free_statements_maybe_empty -> free_statement . free_statements_maybe_empty
    (11) free_statements_maybe_empty -> .
    (12) free_statements_maybe_empty -> . free_statement free_statements_maybe_empty
    (9) free_statement -> . compound_stmt
    (10) free_statement -> . simple_stmt ;
    (18) compound_stmt -> . for_stmt
    (19) compound_stmt -> . while_stmt
    (20) compound_stmt -> . if_stmt
    (15) simple_stmt -> . return_stmt
    (16) simple_stmt -> . print_stmt
    (17) simple_stmt -> . asgn_stmt
    (32) for_stmt -> . FOR ( ; ; ) statement
    (33) for_stmt -> . FOR ( ; ; asgn_stmt ) statement
    (34) for_stmt -> . FOR ( ; lexpr ; ) statement
    (35) for_stmt -> . FOR ( ; lexpr ; asgn_stmt ) statement
    (36) for_stmt -> . FOR ( asgn_stmt ; ; ) statement
    (37) for_stmt -> . FOR ( asgn_stmt ; ; asgn_stmt ) statement
    (38) for_stmt -> . FOR ( asgn_stmt ; lexpr ; ) statement
    (39) for_stmt -> . FOR ( asgn_stmt ; lexpr ; asgn_stmt ) statement
    (31) while_stmt -> . WHILE lexpr statement
    (29) if_stmt -> . IF lexpr statement
    (30) if_stmt -> . IF lexpr statement ELSE statement
    (28) return_stmt -> . RETURN expr
    (27) print_stmt -> . PRINT expr
    (25) asgn_stmt -> . ID = expr
    (26) asgn_stmt -> . ID [ aexpr ] = expr
    $end            reduce using rule 11 (free_statements_maybe_empty -> .)
    FOR             shift and go to state 20
    WHILE           shift and go to state 21
    IF              shift and go to state 22
    RETURN          shift and go to state 23
    PRINT           shift and go to state 24
    ID              shift and go to state 25

    free_statement                 shift and go to state 11
    free_statements_maybe_empty    shift and go to state 31
    compound_stmt                  shift and go to state 12
    simple_stmt                    shift and go to state 13
    for_stmt                       shift and go to state 14
    while_stmt                     shift and go to state 15
    if_stmt                        shift and go to state 16
    return_stmt                    shift and go to state 17
    print_stmt                     shift and go to state 18
    asgn_stmt                      shift and go to state 19

state 12

    (9) free_statement -> compound_stmt .
    FOR             reduce using rule 9 (free_statement -> compound_stmt .)
    WHILE           reduce using rule 9 (free_statement -> compound_stmt .)
    IF              reduce using rule 9 (free_statement -> compound_stmt .)
    RETURN          reduce using rule 9 (free_statement -> compound_stmt .)
    PRINT           reduce using rule 9 (free_statement -> compound_stmt .)
    ID              reduce using rule 9 (free_statement -> compound_stmt .)
    $end            reduce using rule 9 (free_statement -> compound_stmt .)
    ELSE            reduce using rule 9 (free_statement -> compound_stmt .)
    {               reduce using rule 9 (free_statement -> compound_stmt .)
    }               reduce using rule 9 (free_statement -> compound_stmt .)


state 13

    (10) free_statement -> simple_stmt . ;
    ;               shift and go to state 32


state 14

    (18) compound_stmt -> for_stmt .
    FOR             reduce using rule 18 (compound_stmt -> for_stmt .)
    WHILE           reduce using rule 18 (compound_stmt -> for_stmt .)
    IF              reduce using rule 18 (compound_stmt -> for_stmt .)
    RETURN          reduce using rule 18 (compound_stmt -> for_stmt .)
    PRINT           reduce using rule 18 (compound_stmt -> for_stmt .)
    ID              reduce using rule 18 (compound_stmt -> for_stmt .)
    $end            reduce using rule 18 (compound_stmt -> for_stmt .)
    ELSE            reduce using rule 18 (compound_stmt -> for_stmt .)
    {               reduce using rule 18 (compound_stmt -> for_stmt .)
    }               reduce using rule 18 (compound_stmt -> for_stmt .)


state 15

    (19) compound_stmt -> while_stmt .
    FOR             reduce using rule 19 (compound_stmt -> while_stmt .)
    WHILE           reduce using rule 19 (compound_stmt -> while_stmt .)
    IF              reduce using rule 19 (compound_stmt -> while_stmt .)
    RETURN          reduce using rule 19 (compound_stmt -> while_stmt .)
    PRINT           reduce using rule 19 (compound_stmt -> while_stmt .)
    ID              reduce using rule 19 (compound_stmt -> while_stmt .)
    $end            reduce using rule 19 (compound_stmt -> while_stmt .)
    ELSE            reduce using rule 19 (compound_stmt -> while_stmt .)
    {               reduce using rule 19 (compound_stmt -> while_stmt .)
    }               reduce using rule 19 (compound_stmt -> while_stmt .)


state 16

    (20) compound_stmt -> if_stmt .
    FOR             reduce using rule 20 (compound_stmt -> if_stmt .)
    WHILE           reduce using rule 20 (compound_stmt -> if_stmt .)
    IF              reduce using rule 20 (compound_stmt -> if_stmt .)
    RETURN          reduce using rule 20 (compound_stmt -> if_stmt .)
    PRINT           reduce using rule 20 (compound_stmt -> if_stmt .)
    ID              reduce using rule 20 (compound_stmt -> if_stmt .)
    $end            reduce using rule 20 (compound_stmt -> if_stmt .)
    ELSE            reduce using rule 20 (compound_stmt -> if_stmt .)
    {               reduce using rule 20 (compound_stmt -> if_stmt .)
    }               reduce using rule 20 (compound_stmt -> if_stmt .)


state 17

    (15) simple_stmt -> return_stmt .
    ;               reduce using rule 15 (simple_stmt -> return_stmt .)


state 18

    (16) simple_stmt -> print_stmt .
    ;               reduce using rule 16 (simple_stmt -> print_stmt .)


state 19

    (17) simple_stmt -> asgn_stmt .
    ;               reduce using rule 17 (simple_stmt -> asgn_stmt .)


state 20

    (32) for_stmt -> FOR . ( ; ; ) statement
    (33) for_stmt -> FOR . ( ; ; asgn_stmt ) statement
    (34) for_stmt -> FOR . ( ; lexpr ; ) statement
    (35) for_stmt -> FOR . ( ; lexpr ; asgn_stmt ) statement
    (36) for_stmt -> FOR . ( asgn_stmt ; ; ) statement
    (37) for_stmt -> FOR . ( asgn_stmt ; ; asgn_stmt ) statement
    (38) for_stmt -> FOR . ( asgn_stmt ; lexpr ; ) statement
    (39) for_stmt -> FOR . ( asgn_stmt ; lexpr ; asgn_stmt ) statement
    (               shift and go to state 33


state 21

    (31) while_stmt -> WHILE . lexpr statement
    (46) lexpr -> . lterm
    (47) lexpr -> . lexpr OR lterm
    (48) lterm -> . lfact
    (49) lterm -> . lterm AND lfact
    (50) lfact -> . FALSE
    (51) lfact -> . TRUE
    (52) lfact -> . ! lfact
    (53) lfact -> . # ID [ aexpr ]
    (54) lfact -> . # ID
    (55) lfact -> . ( lexpr )
    (56) lfact -> . # call
    (57) lfact -> . cexpr
    (70) cexpr -> . aexpr > aexpr
    (71) cexpr -> . aexpr < aexpr
    (72) cexpr -> . aexpr GE aexpr
    (73) cexpr -> . aexpr LE aexpr
    (74) cexpr -> . aexpr EQUAL aexpr
    (75) cexpr -> . aexpr NOT_EQUAL aexpr
    (58) aexpr -> . term
    (59) aexpr -> . aexpr + term
    (60) aexpr -> . aexpr - term
    (61) term -> . fact
    (62) term -> . term * fact
    (63) term -> . term / fact
    (64) fact -> . ID
    (65) fact -> . ID [ aexpr ]
    (66) fact -> . ( aexpr )
    (67) fact -> . NUMBER
    (68) fact -> . call
    (69) fact -> . - fact
    (83) call -> . ID ( )
    (84) call -> . ID ( arguments )
    FALSE           shift and go to state 37
    TRUE            shift and go to state 38
    !               shift and go to state 39
    #               shift and go to state 40
    (               shift and go to state 43
    ID              shift and go to state 41
    NUMBER          shift and go to state 49
    -               shift and go to state 47

    lexpr                          shift and go to state 34
    lterm                          shift and go to state 35
    lfact                          shift and go to state 36
    aexpr                          shift and go to state 42
    call                           shift and go to state 44
    cexpr                          shift and go to state 45
    term                           shift and go to state 46
    fact                           shift and go to state 48

state 22

    (29) if_stmt -> IF . lexpr statement
    (30) if_stmt -> IF . lexpr statement ELSE statement
    (46) lexpr -> . lterm
    (47) lexpr -> . lexpr OR lterm
    (48) lterm -> . lfact
    (49) lterm -> . lterm AND lfact
    (50) lfact -> . FALSE
    (51) lfact -> . TRUE
    (52) lfact -> . ! lfact
    (53) lfact -> . # ID [ aexpr ]
    (54) lfact -> . # ID
    (55) lfact -> . ( lexpr )
    (56) lfact -> . # call
    (57) lfact -> . cexpr
    (70) cexpr -> . aexpr > aexpr
    (71) cexpr -> . aexpr < aexpr
    (72) cexpr -> . aexpr GE aexpr
    (73) cexpr -> . aexpr LE aexpr
    (74) cexpr -> . aexpr EQUAL aexpr
    (75) cexpr -> . aexpr NOT_EQUAL aexpr
    (58) aexpr -> . term
    (59) aexpr -> . aexpr + term
    (60) aexpr -> . aexpr - term
    (61) term -> . fact
    (62) term -> . term * fact
    (63) term -> . term / fact
    (64) fact -> . ID
    (65) fact -> . ID [ aexpr ]
    (66) fact -> . ( aexpr )
    (67) fact -> . NUMBER
    (68) fact -> . call
    (69) fact -> . - fact
    (83) call -> . ID ( )
    (84) call -> . ID ( arguments )
    FALSE           shift and go to state 37
    TRUE            shift and go to state 38
    !               shift and go to state 39
    #               shift and go to state 40
    (               shift and go to state 43
    ID              shift and go to state 41
    NUMBER          shift and go to state 49
    -               shift and go to state 47

    lexpr                          shift and go to state 50
    lterm                          shift and go to state 35
    lfact                          shift and go to state 36
    aexpr                          shift and go to state 42
    call                           shift and go to state 44
    cexpr                          shift and go to state 45
    term                           shift and go to state 46
    fact                           shift and go to state 48

state 23

    (28) return_stmt -> RETURN . expr
    (41) expr -> . sexpr
    (42) expr -> . aexpr
    (43) expr -> . lexpr
    (76) sexpr -> . STRING
    (58) aexpr -> . term
    (59) aexpr -> . aexpr + term
    (60) aexpr -> . aexpr - term
    (46) lexpr -> . lterm
    (47) lexpr -> . lexpr OR lterm
    (61) term -> . fact
    (62) term -> . term * fact
    (63) term -> . term / fact
    (48) lterm -> . lfact
    (49) lterm -> . lterm AND lfact
    (64) fact -> . ID
    (65) fact -> . ID [ aexpr ]
    (66) fact -> . ( aexpr )
    (67) fact -> . NUMBER
    (68) fact -> . call
    (69) fact -> . - fact
    (50) lfact -> . FALSE
    (51) lfact -> . TRUE
    (52) lfact -> . ! lfact
    (53) lfact -> . # ID [ aexpr ]
    (54) lfact -> . # ID
    (55) lfact -> . ( lexpr )
    (56) lfact -> . # call
    (57) lfact -> . cexpr
    (83) call -> . ID ( )
    (84) call -> . ID ( arguments )
    (70) cexpr -> . aexpr > aexpr
    (71) cexpr -> . aexpr < aexpr
    (72) cexpr -> . aexpr GE aexpr
    (73) cexpr -> . aexpr LE aexpr
    (74) cexpr -> . aexpr EQUAL aexpr
    (75) cexpr -> . aexpr NOT_EQUAL aexpr
    STRING          shift and go to state 55
    ID              shift and go to state 41
    (               shift and go to state 56
    NUMBER          shift and go to state 49
    -               shift and go to state 47
    FALSE           shift and go to state 37
    TRUE            shift and go to state 38
    !               shift and go to state 39
    #               shift and go to state 40

    expr                           shift and go to state 51
    sexpr                          shift and go to state 52
    aexpr                          shift and go to state 53
    lexpr                          shift and go to state 54
    term                           shift and go to state 46
    lterm                          shift and go to state 35
    fact                           shift and go to state 48
    lfact                          shift and go to state 36
    call                           shift and go to state 44
    cexpr                          shift and go to state 45

state 24

    (27) print_stmt -> PRINT . expr
    (41) expr -> . sexpr
    (42) expr -> . aexpr
    (43) expr -> . lexpr
    (76) sexpr -> . STRING
    (58) aexpr -> . term
    (59) aexpr -> . aexpr + term
    (60) aexpr -> . aexpr - term
    (46) lexpr -> . lterm
    (47) lexpr -> . lexpr OR lterm
    (61) term -> . fact
    (62) term -> . term * fact
    (63) term -> . term / fact
    (48) lterm -> . lfact
    (49) lterm -> . lterm AND lfact
    (64) fact -> . ID
    (65) fact -> . ID [ aexpr ]
    (66) fact -> . ( aexpr )
    (67) fact -> . NUMBER
    (68) fact -> . call
    (69) fact -> . - fact
    (50) lfact -> . FALSE
    (51) lfact -> . TRUE
    (52) lfact -> . ! lfact
    (53) lfact -> . # ID [ aexpr ]
    (54) lfact -> . # ID
    (55) lfact -> . ( lexpr )
    (56) lfact -> . # call
    (57) lfact -> . cexpr
    (83) call -> . ID ( )
    (84) call -> . ID ( arguments )
    (70) cexpr -> . aexpr > aexpr
    (71) cexpr -> . aexpr < aexpr
    (72) cexpr -> . aexpr GE aexpr
    (73) cexpr -> . aexpr LE aexpr
    (74) cexpr -> . aexpr EQUAL aexpr
    (75) cexpr -> . aexpr NOT_EQUAL aexpr
    STRING          shift and go to state 55
    ID              shift and go to state 41
    (               shift and go to state 56
    NUMBER          shift and go to state 49
    -               shift and go to state 47
    FALSE           shift and go to state 37
    TRUE            shift and go to state 38
    !               shift and go to state 39
    #               shift and go to state 40

    expr                           shift and go to state 57
    sexpr                          shift and go to state 52
    aexpr                          shift and go to state 53
    lexpr                          shift and go to state 54
    term                           shift and go to state 46
    lterm                          shift and go to state 35
    fact                           shift and go to state 48
    lfact                          shift and go to state 36
    call                           shift and go to state 44
    cexpr                          shift and go to state 45

state 25

    (25) asgn_stmt -> ID . = expr
    (26) asgn_stmt -> ID . [ aexpr ] = expr
    =               shift and go to state 58
    [               shift and go to state 59


state 26

    (8) fun_decls_maybe_empty -> fun_decl fun_decls_maybe_empty .
    FOR             reduce using rule 8 (fun_decls_maybe_empty -> fun_decl fun_decls_maybe_empty .)
    WHILE           reduce using rule 8 (fun_decls_maybe_empty -> fun_decl fun_decls_maybe_empty .)
    IF              reduce using rule 8 (fun_decls_maybe_empty -> fun_decl fun_decls_maybe_empty .)
    RETURN          reduce using rule 8 (fun_decls_maybe_empty -> fun_decl fun_decls_maybe_empty .)
    PRINT           reduce using rule 8 (fun_decls_maybe_empty -> fun_decl fun_decls_maybe_empty .)
    ID              reduce using rule 8 (fun_decls_maybe_empty -> fun_decl fun_decls_maybe_empty .)
    $end            reduce using rule 8 (fun_decls_maybe_empty -> fun_decl fun_decls_maybe_empty .)


state 27

    (6) fun_decl -> FUN function .
    FUN             reduce using rule 6 (fun_decl -> FUN function .)
    FOR             reduce using rule 6 (fun_decl -> FUN function .)
    WHILE           reduce using rule 6 (fun_decl -> FUN function .)
    IF              reduce using rule 6 (fun_decl -> FUN function .)
    RETURN          reduce using rule 6 (fun_decl -> FUN function .)
    PRINT           reduce using rule 6 (fun_decl -> FUN function .)
    ID              reduce using rule 6 (fun_decl -> FUN function .)
    $end            reduce using rule 6 (fun_decl -> FUN function .)


state 28

    (78) function -> ID . ( ) block
    (79) function -> ID . ( parameters ) block
    (               shift and go to state 60


state 29

    (2) var_decl -> VAR ID ; .
    VAR             reduce using rule 2 (var_decl -> VAR ID ; .)
    FUN             reduce using rule 2 (var_decl -> VAR ID ; .)
    FOR             reduce using rule 2 (var_decl -> VAR ID ; .)
    WHILE           reduce using rule 2 (var_decl -> VAR ID ; .)
    IF              reduce using rule 2 (var_decl -> VAR ID ; .)
    RETURN          reduce using rule 2 (var_decl -> VAR ID ; .)
    PRINT           reduce using rule 2 (var_decl -> VAR ID ; .)
    ID              reduce using rule 2 (var_decl -> VAR ID ; .)
    $end            reduce using rule 2 (var_decl -> VAR ID ; .)
    {               reduce using rule 2 (var_decl -> VAR ID ; .)
    }               reduce using rule 2 (var_decl -> VAR ID ; .)


state 30

    (3) var_decl -> VAR ID = . init ;
    (13) init -> . [ exprs_non_empty_w_commas ]
    (14) init -> . expr
    (41) expr -> . sexpr
    (42) expr -> . aexpr
    (43) expr -> . lexpr
    (76) sexpr -> . STRING
    (58) aexpr -> . term
    (59) aexpr -> . aexpr + term
    (60) aexpr -> . aexpr - term
    (46) lexpr -> . lterm
    (47) lexpr -> . lexpr OR lterm
    (61) term -> . fact
    (62) term -> . term * fact
    (63) term -> . term / fact
    (48) lterm -> . lfact
    (49) lterm -> . lterm AND lfact
    (64) fact -> . ID
    (65) fact -> . ID [ aexpr ]
    (66) fact -> . ( aexpr )
    (67) fact -> . NUMBER
    (68) fact -> . call
    (69) fact -> . - fact
    (50) lfact -> . FALSE
    (51) lfact -> . TRUE
    (52) lfact -> . ! lfact
    (53) lfact -> . # ID [ aexpr ]
    (54) lfact -> . # ID
    (55) lfact -> . ( lexpr )
    (56) lfact -> . # call
    (57) lfact -> . cexpr
    (83) call -> . ID ( )
    (84) call -> . ID ( arguments )
    (70) cexpr -> . aexpr > aexpr
    (71) cexpr -> . aexpr < aexpr
    (72) cexpr -> . aexpr GE aexpr
    (73) cexpr -> . aexpr LE aexpr
    (74) cexpr -> . aexpr EQUAL aexpr
    (75) cexpr -> . aexpr NOT_EQUAL aexpr
    [               shift and go to state 62
    STRING          shift and go to state 55
    ID              shift and go to state 41
    (               shift and go to state 56
    NUMBER          shift and go to state 49
    -               shift and go to state 47
    FALSE           shift and go to state 37
    TRUE            shift and go to state 38
    !               shift and go to state 39
    #               shift and go to state 40

    init                           shift and go to state 61
    expr                           shift and go to state 63
    sexpr                          shift and go to state 52
    aexpr                          shift and go to state 53
    lexpr                          shift and go to state 54
    term                           shift and go to state 46
    lterm                          shift and go to state 35
    fact                           shift and go to state 48
    lfact                          shift and go to state 36
    call                           shift and go to state 44
    cexpr                          shift and go to state 45

state 31

    (12) free_statements_maybe_empty -> free_statement free_statements_maybe_empty .
    $end            reduce using rule 12 (free_statements_maybe_empty -> free_statement free_statements_maybe_empty .)


state 32
